WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
302113
REGRESSION(
302582@main
): TestWebKitAPI.WebKit2.CrashGPUProcessAfterApplyingConstraints times out
https://bugs.webkit.org/show_bug.cgi?id=302113
Summary
REGRESSION(302582@main): TestWebKitAPI.WebKit2.CrashGPUProcessAfterApplyingCo...
Jonathan Bedard
Reported
2025-11-06 12:59:21 PST
On macOS Debug, TestWebKitAPI.WebKit2.CrashGPUProcessAfterApplyingConstraints times out after
302582@main
. Validated via bisection. History:
https://results.webkit.org/?suite=api-tests&test=TestWebKitAPI.WebKit2.CrashGPUProcessAfterApplyingConstraints
Build:
https://build.webkit.org/#/builders/1701/builds/98
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-11-06 12:59:35 PST
<
rdar://problem/164194814
>
youenn fablet
Comment 2
2025-11-07 01:47:02 PST
Pull request:
https://github.com/WebKit/WebKit/pull/53580
EWS
Comment 3
2025-11-07 05:43:55 PST
Committed
302722@main
(410a0085f29c): <
https://commits.webkit.org/302722@main
> Reviewed commits have been landed. Closing PR #53580 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug